--- a/toolkits/build.gradle
+++ b/toolkits/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.jkyeo'
+group='com.jkyeo'
 
 android {
     compileSdkVersion 23
